force-app/main/default/objects/HRCSVC_Problem_Resolution_Code__c/HRCSVC_Problem_Resolution_Code__c.object-meta.xml
<CustomObject>
    <description>Custom object that is responsible for storing and managing Case Problem/Resolution codes. SE-1033.</description>
    <label>Problem/Resolution Code</label>
    <nameField>
        <label>Problem/Resolution Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Problem/Resolution Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>