force-app/main/default/objects/HRCSVC_Problem_Resolution_Code__c/fields/HRCSVC_Parent_Problem_Code__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Parent_Problem_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent problem code that defines the hierarchy. SE-833.</description>
    <label>Parent Problem Code</label>
    <referenceTo>HRCSVC_Problem_Resolution_Code__c</referenceTo>
    <relationshipName>Problem_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>