force-app/main/default/objects/HRCSVC_Problem_Resolution_Code__c/fields/HRCSVC_Search_String__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Search_String__c</fullName>
    <defaultValue>&apos;### XXX&apos;</defaultValue>
    <description>Field used to enable agents to search on a default search term and be able to return all Problem Codes to select from. Built as part of SE-833.</description>
    <label>Search String</label>
    <length>7</length>
    <type>Text</type>
</CustomField>