force-app/main/default/objects/HRCSVC_Problem_Resolution_Code__c/fields/HRCSVC_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint Code List by Product</fullName>
            </value>
            <value>
                <fullName>As Reported</fullName>
            </value>
            <value>
                <fullName>Main Assembly - Sub Assembly</fullName>
            </value>
            <value>
                <fullName>Reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>