force-app/main/default/objects/HRCSVC_Problem_Resolution_Code__c/fields/HRCSVC_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Unique_ID__c</fullName>
    <externalId>true</externalId>
    <label>Unique ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>